fix problems with main element wrapping the slider

--- a/css/pricing-panel.css
+++ b/css/pricing-panel.css
@@ -13,3 +13,10 @@
     color:  hsl(225, 20%, 60%);
     text-transform: uppercase;
 }
+
+main {
+    width: 100%;
+    display: flex;
+    flex-flow: column wrap;
+    align-items: center;
+}
